--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -14,8 +14,9 @@
             <nav class="site-nav animate__bounceIn">
                 <ul>
                     <li><a href="#landingPage">Landing Page</a></li>
-                    <li><a href="#projects">Projects</a></li>
                     <li><a href="#aboutMe">About Me</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="/DataBase.html">DataBase</a></li>
                 </ul>
             </nav>
         </header>
