--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -16,7 +16,7 @@
                     <li><a href="#landingPage">Landing Page</a></li>
                     <li><a href="#aboutMe">About Me</a></li>
                     <li><a href="#projects">Projects</a></li>
-                    <li><a href="/DataBase.html">DataBase</a></li>
+                    <li><a href="/LehiWeedsPortfolio/Portfolio/DataBase.html">DataBase</a></li>
                 </ul>
             </nav>
         </header>
