--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+        <link rel="icon" href="https://lehiweed.github.io/LehiWeedsPortfolio/Portfolio/favicon.png">
     </head>
     <body>
         <header class="site-header" data-aos="zoom-in">
