Changed text Internet-> Information

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -27,7 +27,7 @@
                 <div class="text-content animate__bounceIn">
                 <h2>Welcome to My Portfolio</h2>
                 <p>
-                    My name is Lehi Weed, and I am a specialist in Internet Technologies and web design.
+                    My name is Lehi Weed, and I am a specialist in (IT)Information Technologies and Web Design.
                     <br>
                     This is my updated 2025 Portfolio.
                     <br>
