--- a/Portfolio/DataBase.html
+++ b/Portfolio/DataBase.html
@@ -8,6 +8,14 @@
         <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     </head>
+    <header class="site-header" data-aos="zoom-in">
+        <img src="./images/LehiWeedsPortfoliologo.png" alt="Logo" class="site-logo animate__bounceIn">
+        <nav class="site-nav animate__bounceIn">
+            <ul>
+                <li><a href="index.html">Landing Page</a></li>
+            </ul>
+        </nav>
+    </header>
     <body>
         <title>DataBase</title>
     <div class="text-container">
