--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -46,9 +46,10 @@
                     <h2 data-aos="fade-up">About me</h2>
                     <p>
                         Hello, my name is Lehi Weed. I am a Web developer and a Specialist in Information Technologies, Networking, and Virtualization.
-                        I am a student at Finger Lakes Community College, and I am currently academically involved in a dual major in Psychology and Cyber Security.
+                        I am a student at Finger Lakes Community College, and I am currently academically involved in a dual major in Psychology, also Networking and Cyber Security.
                         I work with local businesses at DCS, short for Data Conversion Services, working on a variety of projects from website design to server and cloud integration.
                     </p>
+                    <a href="/LehiWeedsPortfolio/Portfolio/infographic.html">Infographic</a>
                 </div>
             </div>
         </section>
