--- a/Portfolio/infographic.html
+++ b/Portfolio/infographic.html
@@ -14,28 +14,16 @@
             <img src="./images/LehiWeedsPortfoliologo.png" alt="Logo" class="site-logo animate__bounceIn">
             <nav class="site-nav animate__bounceIn">
                 <ul>
-                    <li><a href="#landingPage">Landing Page</a></li>
-                    <li><a href="#aboutMe">About Me</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="/LehiWeedsPortfolio/Portfolio/DataBase.html">DataBase</a></li>
+                    <li><a href="/Portfolio/index.html">Landing Page</a></li>
                 </ul>
             </nav>
         </header>
         <section id="landingPage" class="text-section">
-            <div class="text-container" data-aos="fade-up">
-                <img src="./images/Lehi Weed.jpg" alt="LehiWeed" class="profile-img animate__bounceIn" />
+            <div class="text-container" data-aos="fade-up">                
                 <div class="text-content animate__bounceIn">
-                <h2>Welcome to My Portfolio</h2>
-                <p>
-                    My name is Lehi Weed, and I am a specialist in (IT)Information Technologies and Web Design.
+                <h2>5 Popular object orinted languages that have shapped my career</h2>
+                    <img src="https://www.canva.com/design/DAG62NPvvYE/99hbA2DsnkRQM3VYH_34PQ/view?utm_content=DAG62NPvvYE&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=heeff736ff0" class="animate__bounceIn" alt="Infographic"/>
                     <br>
-                    This is my updated 2025 Portfolio.
-                    <br>
-                    If you are curious for more information about me or even some of the projects I’ve worked on, check out the links around this site.
-                    <br>
-                    Follow me on Social Media down below for more information.
-                </p>
-                <a href="#aboutMe" class="cta-button">About Me</a>
                 </div>
             </div>
         </section>
