Redone my whole page. Footer, Projects pages added resume page infogrphics page and database page all changed.

--- a/Portfolio/DataBase.html
+++ b/Portfolio/DataBase.html
@@ -3,47 +3,95 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>DataBase</title>
         <link rel="stylesheet" href="./css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     </head>
+    <body>
     <header class="site-header" data-aos="zoom-in">
         <img src="./images/LehiWeedsPortfoliologo.png" alt="Logo" class="site-logo animate__bounceIn">
         <nav class="site-nav animate__bounceIn">
             <ul>
-                <li><a href="index.html">Landing Page</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html#aboutMe">About</a></li>
+                <li><a href="index.html#projects">Projects</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="DataBase.html">DataBase</a></li>
             </ul>
         </nav>
+        <a href="#reflection" class="cta-button" style="margin-left:12px;">Reflections</a>
     </header>
-    <body>
-        <title>DataBase</title>
+    <main>
     <div class="text-container">
         <div class="text-content">
-            <h1>DataBase</h3>
-                <a href="https://airtable.com/app5igqIh4ZWnem3s/shrb9jjE0pc0tAb9x">Airtable</a>
+            <h1>DataBase</h1>
+            <p><a href="https://airtable.com/app5igqIh4ZWnem3s/shrb9jjE0pc0tAb9x" target="_blank" rel="noopener">Airtable</a></p>
             <hr>
-            <h2>Reciepts</h2>
-        </div>        
+            <h2>Receipts</h2>
+        </div>
     </div>
-    <iframe class="airtable-embed" src="https://airtable.com/embed/app5igqIh4ZWnem3s/shrwA038p3Zl5OIVy?viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+    <iframe class="airtable-embed" src="https://airtable.com/embed/app5igqIh4ZWnem3s/shrwA038p3Zl5OIVy?viewControls=on" frameborder="0" onmousewheel="" width="100%" height="600" style="background: transparent; border: 1px solid #ccc;"></iframe>
     <div class="text-container">
         <div class="text-content">
             <h2>Customers</h2>
         </div>        
     </div>
-    <iframe class="airtable-embed" src="https://airtable.com/embed/app5igqIh4ZWnem3s/shrdIArP9S3SXtLkT?viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+    <iframe class="airtable-embed" src="https://airtable.com/embed/app5igqIh4ZWnem3s/shrdIArP9S3SXtLkT?viewControls=on" frameborder="0" onmousewheel="" width="100%" height="600" style="background: transparent; border: 1px solid #ccc;"></iframe>
     <div class="text-container">
         <div class="text-content">
             <h2>Add a Customer</h2>
         </div>        
     </div>
-    <iframe class="airtable-embed" src="https://airtable.com/embed/app5igqIh4ZWnem3s/shrUDgJ44sBsTLdpt" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+    <iframe class="airtable-embed" src="https://airtable.com/embed/app5igqIh4ZWnem3s/shrUDgJ44sBsTLdpt" frameborder="0" onmousewheel="" width="100%" height="600" style="background: transparent; border: 1px solid #ccc;"></iframe>
     <div class="text-container">
         <div class="text-content">
             <h2>List Of Products</h2>
         </div>        
     </div>
-    <iframe class="airtable-embed" src="https://airtable.com/embed/app5igqIh4ZWnem3s/shrCd5C9lvb197CmN?viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
-    </body>
+    <iframe class="airtable-embed" src="https://airtable.com/embed/app5igqIh4ZWnem3s/shrCd5C9lvb197CmN?viewControls=on" frameborder="0" onmousewheel="" width="100%" height="600" style="background: transparent; border: 1px solid #ccc;"></iframe>
+    <section id="reflection" class="text-section">
+        <div class="text-container">
+            <div class="text-content">
+                <h2>Reflection</h2>
+                <h4>Lessons learned</h4>
+                <p id="db-lessons">I've never used airtable before, and I probibly will not have to agian, but it was nice to learn this, and regardless of what kind of database it is they are used in every company.</p>
+                <h4>What I like about this artifact</h4>
+                <p id="db-like">I liked how visual the database was and the instruction made this project clear and easy to understand.</p>
+                <h4>What I would change</h4>
+                <p id="db-change">I would like to make this in something more practical such as SQL a Structured Query Language which would allow students to devolep more practical skills.</p>
+                <h4>How this helps in the future</h4>
+                <p id="db-future">I understad Databases better, and know what airtable is so I don't have to use it, unless it becomes more inovative then some other coding applications.</p>
+            </div>
+        </div>
+    </section>
+    </main>
+    <footer class="site-footer">
+        <div class="footer-container">
+            <div class="footer-left">
+                <p>Lehi Weed — Web Developer & IT Specialist</p>
+            </div>
+            <div class="footer-center">
+                <nav>
+                    <a href="index.html">Home</a>
+                    <a href="index.html#aboutMe">About</a>
+                    <a href="index.html#projects">Projects</a>
+                    <a href="resume.html">Resume</a>
+                </nav>
+            </div>
+            <div class="footer-right">
+                <div class="social">
+                    <a href="https://www.facebook.com/lehi.weed"><img src="./images/icons8-facebook.svg" alt="Facebook"/></a>
+                    <a href="https://www.instagram.com/lehi_weed/"><img src="./images/icons8-instagram-50.svg" alt="Instagram"/></a>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">© 2025 Lehi Weed — All rights reserved.</div>
+    </footer>
+
+    <script>
+        AOS.init();
+    </script>
+</body>
 </html>
