--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -17,7 +17,7 @@
                     <li><a href="#landingPage">Landing Page</a></li>
                     <li><a href="#aboutMe">About Me</a></li>
                     <li><a href="#projects">Projects</a></li>
-                    <li><a href="/LehiWeedsPortfolio/Portfolio/DataBase.html">DataBase</a></li>
+                    <li><a href="resume.html">Resume</a></li>
                 </ul>
             </nav>
         </header>
@@ -49,64 +49,102 @@
                         I am a student at Finger Lakes Community College, and I am currently academically involved in a dual major in Psychology, also Networking and Cyber Security.
                         I work with local businesses at DCS, short for Data Conversion Services, working on a variety of projects from website design to server and cloud integration.
                     </p>
-                    <a href="/LehiWeedsPortfolio/Portfolio/infographic.html">Infographic</a>
+                    <p>View my resume: <a href="resume.html">Download / View Resume</a></p>
                 </div>
             </div>
         </section>
         <hr>
         <section data-aos="fade-up">
             <div class="text-content">
-                <h2 id="projects">Other Sites</h2>
+                <h2 id="projects">Projects</h2>
                 <p>Here are some more of the projects I have worked on:</p>
             </div>    
             <div class="tabs-section">
                 <a href="https://www.dcsnewyork.com/">
                     <div class="site-tab">
-                        <img src="./images/DCS.png" alt="Home">
+                        <img src="./images/DCS.png" alt="Project">
                         <span>DCS</span>
                     </div>
                 </a>
                 <a href="https://www.maintenancefreedom.com/">
                     <div class="site-tab">
-                        <img src="./images/MaintenanceFreedom-Logo.png" alt="Home">
+                        <img src="./images/MaintenanceFreedom-Logo.png" alt="Project 1">
                         <span>Maintenance Freedom</span>
                     </div>
                 </a>
                 <a href="https://www.bizxposure.com/">
                     <div class="site-tab">
-                        <img src="./images/bizxposureSite.png" alt="Home">
+                        <img src="./images/bizxposureSite.png" alt="Project 2">
                         <span>Bizxposure</span>
                     </div>
                 </a>
                 <a href="https://www.wilcoxfresh.com/">
                     <div class="site-tab">
-                        <img src="./images/wilcox_logo.png" alt="Home">
+                        <img src="./images/wilcox_logo.png" alt="Project 3">
                         <span>Wilcox Fresh</span>
+                    </div>
+                </a>
+                <a href="DataBase.html">
+                    <div class="site-tab">
+                        <img src="./images/csc.jpg" alt="Project 4">
+                        <span>DataBase 4</span>
+                    </div>
+                </a>
+                <a href="project5.html">
+                    <div class="site-tab">
+                        <img src="./images/csc.jpg" alt="Project 5">
+                        <span>Flowchart 5</span>
+                    </div>
+                </a>
+                <a href="project6.html">
+                    <div class="site-tab">
+                        <img src="./images/csc.jpg" alt="Project 6">
+                        <span>Computational Thinking/Messy Problems 6</span>
+                    </div>
+                </a>
+                <a href="project7.html">
+                    <div class="site-tab">
+                        <img src="./images/csc.jpg" alt="Project 7">
+                        <span>Shopping Cart Redesign Computational Thinking 7</span>
+                    </div>
+                </a>
+                <a href="project8.html">
+                    <div class="site-tab">
+                        <img src="./images/csc.jpg" alt="Project 8">
+                        <span>The Turning Test 8</span>
+                    </div>
+                </a>
+                <a href="infographic.html">
+                    <div class="site-tab">
+                        <img src="./images/csc.jpg" alt="Infographic">
+                        <span>Infographic</span>
                     </div>
                 </a>
             </div>
         </section>
-        <footer>
+        <footer class="site-footer">
             <div class="footer-container" data-aos="zoom-in">
-                <div class="social-media">
-                <!-- social links -->
-                    <h2>Social Media</h2>
-                    <div class="social-media">
-                        <a href="https://www.facebook.com/lehi.weed" class="facebook" aria-label="Facebook">
-                            <img src="./images/icons8-facebook.svg" alt="Facebook" />
-                        </a>
-                        <a href="https://www.instagram.com/lehi_weed/" class="instagram" aria-label="Instagram">
-                            <img src="./images/icons8-instagram-50.svg" alt="Instagram" />
-                        </a>
-                        <a href="https://x.com/YellowHeadThing" class="x" aria-label="X (formerly Twitter)">
-                            <img src="./images/icons8-x-50.svg" alt="X" />
-                        </a>
-                        <a href="https://www.linkedin.com/in/lehi-weed-63026a382/" class="linkedin" aria-label="LinkedIn">
-                            <img src="./images/icons8-linkedin-50.svg" alt="LinkedIn" />
-                        </a>
+                <div class="footer-left">
+                    <p>Lehi Weed — Web Developer & IT Specialist</p>
+                </div>
+                <div class="footer-center">
+                    <nav>
+                        <a href="index.html">Home</a>
+                        <a href="index.html#aboutMe">About</a>
+                        <a href="index.html#projects">Projects</a>
+                        <a href="resume.html">Resume</a>
+                    </nav>
+                </div>
+                <div class="footer-right">
+                    <div class="social">
+                        <a href="https://www.facebook.com/lehi.weed"><img src="./images/icons8-facebook.svg" alt="Facebook"/></a>
+                        <a href="https://www.instagram.com/lehi_weed/"><img src="./images/icons8-instagram-50.svg" alt="Instagram"/></a>
+                        <a href="https://x.com/YellowHeadThing"><img src="./images/icons8-x-50.svg" alt="X"/></a>
+                        <a href="https://www.linkedin.com/in/lehi-weed-63026a382/"><img src="./images/icons8-linkedin-50.svg" alt="LinkedIn"/></a>
                     </div>
                 </div>
             </div>
+            <div class="footer-bottom">© 2025 Lehi Weed — All rights reserved.</div>
         </footer>
         <script>
             AOS.init();
