--- a/Portfolio/infographic.html
+++ b/Portfolio/infographic.html
@@ -14,43 +14,66 @@
             <img src="./images/LehiWeedsPortfoliologo.png" alt="Logo" class="site-logo animate__bounceIn">
             <nav class="site-nav animate__bounceIn">
                 <ul>
-                    <li><a href="/Portfolio/index.html">Landing Page</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html#aboutMe">About</a></li>
+                    <li><a href="index.html#projects">Projects</a></li>
+                    <li><a href="resume.html">Resume</a></li>
                 </ul>
             </nav>
         </header>
-        <section id="landingPage" class="text-section">
+        <section id="landingPage" class="text-section infographic-section">
             <div class="text-container" data-aos="fade-up">                
                 <div class="text-content animate__bounceIn">
-                <h2>5 Popular object orinted languages that have shapped my career</h2>
-                    <img src="https://www.canva.com/design/DAG62NPvvYE/99hbA2DsnkRQM3VYH_34PQ/view?utm_content=DAG62NPvvYE&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=heeff736ff0" class="animate__bounceIn" alt="Infographic"/>
-                    <br>
-                </div>
-            </div>
-        </section>
-        <footer>
-            <div class="footer-container" data-aos="zoom-in">
-                <div class="social-media">
-                <!-- social links -->
-                    <h2>Social Media</h2>
-                    <div class="social-media">
-                        <a href="https://www.facebook.com/lehi.weed" class="facebook" aria-label="Facebook">
-                            <img src="./images/icons8-facebook.svg" alt="Facebook" />
-                        </a>
-                        <a href="https://www.instagram.com/lehi_weed/" class="instagram" aria-label="Instagram">
-                            <img src="./images/icons8-instagram-50.svg" alt="Instagram" />
-                        </a>
-                        <a href="https://x.com/YellowHeadThing" class="x" aria-label="X (formerly Twitter)">
-                            <img src="./images/icons8-x-50.svg" alt="X" />
-                        </a>
-                        <a href="https://www.linkedin.com/in/lehi-weed-63026a382/" class="linkedin" aria-label="LinkedIn">
-                            <img src="./images/icons8-linkedin-50.svg" alt="LinkedIn" />
-                        </a>
+                <h2>5 Popular object oriented languages that have shaped my career</h2>
+                    <div class="infographic-frame animate__bounceIn">
+                        <iframe class="pdf-embed" src="./images/infographic.pdf" title="Infographic PDF"></iframe>
                     </div>
                 </div>
             </div>
+        </section>
+
+        <section id="infographic-reflection" class="text-section">
+            <div class="text-container">
+                <div class="text-content">
+                    <h2>Reflection — Infographic</h2>
+                    <h4>Lessons learned</h4>
+                    <p>This infographic taught me the value of concise visual communication. Choosing which languages to feature forced me to prioritize key facts and boil down complex ideas into clear, scannable points. I also improved my skills working with design tools and ensuring text legibility across different screen sizes.</p>
+                    <h4>What I like about this artifact</h4>
+                    <p>I like how the infographic provides an at-a-glance overview of languages that influenced my learning path. The visual hierarchy highlights strengths and use-cases for each language and makes the content approachable for readers who prefer visuals over long paragraphs.</p>
+                    <h4>What I would change</h4>
+                    <p>Given more time I'd tighten the color contrast for accessibility, add brief links to sample projects or code snippets for each language, and include a printable/alt text-friendly version for non-visual contexts.</p>
+                    <h4>How this helps in the future</h4>
+                    <p>Creating this infographic improved my ability to summarize technical writing, which I really enjoyed and needed.</p>
+                </div>
+            </div>
+        </section>
+
+        <footer class="site-footer">
+            <div class="footer-container">
+                <div class="footer-left">
+                    <p>Lehi Weed — Web Developer & IT Specialist</p>
+                </div>
+                <div class="footer-center">
+                    <nav>
+                        <a href="index.html">Home</a>
+                        <a href="index.html#aboutMe">About</a>
+                        <a href="index.html#projects">Projects</a>
+                        <a href="resume.html">Resume</a>
+                    </nav>
+                </div>
+                <div class="footer-right">
+                    <div class="social">
+                        <a href="https://www.facebook.com/lehi.weed"><img src="./images/icons8-facebook.svg" alt="Facebook"/></a>
+                        <a href="https://www.instagram.com/lehi_weed/"><img src="./images/icons8-instagram-50.svg" alt="Instagram"/></a>
+                        <a href="https://x.com/YellowHeadThing"><img src="./images/icons8-x-50.svg" alt="X"/></a>
+                        <a href="https://www.linkedin.com/in/lehi-weed-63026a382/"><img src="./images/icons8-linkedin-50.svg" alt="LinkedIn"/></a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">© 2025 Lehi Weed — All rights reserved.</div>
         </footer>
-        <script>
-            AOS.init();
-          </script>
+                <script>
+                        AOS.init();
+                    </script>
     </body>
 </html>
